# Amusework

./: .clang-format  .clang-tidy  .gitattributes  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-win32.yml
cmake/: settings.cmake
examples/: CMakeLists.txt  basic_example.cpp
res/: logo_amusework.psd
runtime/: CMakeLists.txt
runtime/core/: CMakeLists.txt
runtime/core/include/: io.hpp
runtime/core/include/misc/: types.hpp
runtime/core/src/io/: directory.cpp
runtime/include/: amuse.hpp
runtime/include/amuse/: core.hpp  graphics.hpp
runtime/src/: core.cpp  graphics.cpp
